# swanstation

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.md
.github/workflows/: cd.yml  ci.yml
data/database/: gamesettings.ini
dep/: CMakeLists.txt
dep/xbyak/xbyak/: xbyak.h
dep/xxhash/: CMakeLists.txt
dep/xxhash/src/: xxh_x86dispatch.c
duckstation-libretro/: CMakeLists.txt
duckstation-libretro/src/: CMakeLists.txt  CTestTestfile.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  duckstation_libretro.vcxproj  duckstation_libretro.vcxproj.filters
libretro/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  audio_stream.h  cd_image_m3u.cpp  cd_image_pbp.cpp  cpu_detect.h  crash_handler.cpp  jit_code_buffer.cpp  memory_arena.cpp  memory_arena.h  page_fault_handler.cpp  window_info.h
src/common/gl/: context.cpp
src/core/: CMakeLists.txt  bus.cpp  cdrom.h  cpu_code_cache.cpp  cpu_core.cpp  cpu_core.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_types.cpp  dma.h  gpu.cpp  gpu.h  gpu_backend.cpp  gpu_backend.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw.h  gpu_hw_d3d11.cpp  gpu_hw_opengl.cpp  gpu_hw_vulkan.cpp  gpu_sw.cpp  gpu_sw.h  gpu_sw_backend.cpp  gpu_sw_backend.h  gpu_types.h  host_interface.cpp  mdec.h  memory_card.h  pad.cpp  pad.h  settings.cpp  settings.h  spu.h  system.cpp  system.h  timers.h  timing_event.cpp  timing_event.h  types.h
src/duckstation-libretro/: CMakeLists.txt  libretro.h  libretro_game_settings.cpp  libretro_game_settings.h  libretro_host_display.cpp  libretro_host_interface.cpp  libretro_host_interface.h  main.cpp
src/duckstation-sdl/: sdl_host_interface.cpp
src/frontend-common/: cheevos.cpp  common_host_interface.cpp  common_host_interface.h  d3d11_host_display.cpp  d3d11_host_display.h  game_settings.cpp  game_settings.h  opengl_host_display.cpp  opengl_host_display.h  vulkan_host_display.cpp  vulkan_host_display.h
