add_subdirectory(glad)
add_subdirectory(libcue)
add_subdirectory(stb)
add_subdirectory(zlib)
add_subdirectory(minizip)
add_subdirectory(lzma)
add_subdirectory(libFLAC)
add_subdirectory(libchdr)
add_subdirectory(xxhash)
add_subdirectory(rapidjson)
add_subdirectory(glslang)
add_subdirectory(vulkan-loader)
if(NOT BUILD_LIBRETRO_CORE)
  add_subdirectory(googletest)
  add_subdirectory(cubeb)
  add_subdirectory(imgui)
  add_subdirectory(simpleini)
  add_subdirectory(tinyxml2)
endif()

set(LIBSAMPLERATE_ENABLE_SINC_BEST_CONVERTER OFF)
add_subdirectory(libsamplerate)

if(ENABLE_DISCORD_PRESENCE)
  add_subdirectory(discord-rpc)
endif()

if(BUILD_LIBRETRO_CORE)
  add_subdirectory(libretro-common)
endif()

if(ENABLE_CHEEVOS)
  add_subdirectory(rcheevos)
endif()

if(${CPU_ARCH} STREQUAL "aarch32" OR ${CPU_ARCH} STREQUAL "aarch64")
  add_subdirectory(vixl)
endif()

