cmake_minimum_required(VERSION 3.10)
cmake_policy(SET CMP0077 NEW)

project(duckstation-libretro C CXX)

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/../CMakeModules)

set(BUILD_LIBRETRO_CORE ON)
set(BUILD_NOGUI_FRONTEND OFF)
set(BUILD_QT_FRONTEND OFF)
set(BUILD_TESTS OFF)
set(BUILD_UPDATER OFF)

set(ENABLE_DISCORD_PRESENCE OFF)
set(USE_SDL2 OFF)
set(USE_X11 OFF)
set(USE_WAYLAND OFF)
set(USE_EGL OFF)
set(USE_EVDEV OFF)
set(ENABLE_CHEEVOS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_definitions("-DLIBRETRO=1")

add_subdirectory(".." "..")
